[package]
name = "rax25"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Thomas Habets <thomas@habets.se>"]
repository = "https://github.com/ThomasHabets/rax25"
description = "AX.25 connected mode implementation"
keywords = ["radio"]

[dependencies]
anyhow = "1.0.86"
log = "0.4.22"
rust-fsm = "0.7.0"
serialport = "4.5.0"

[dev-dependencies]
clap = { version = "4.5.16", features = ["derive"] }
