[package]
name = "rax25"
version = "0.1.10"
edition = "2021"
license = "MIT"
authors = ["Thomas Habets <thomas@habets.se>"]
repository = "https://github.com/ThomasHabets/rax25"
description = "AX.25 connected mode implementation"
keywords = ["radio"]

[dependencies]
anyhow = "1.0.86"
bus = "2.4.1"
ctrlc = "3.4.5"
log = "0.4.22"
regex = "1.10.6"
rust-fsm = "0.7.0"
serialport = "4.5.0"
#serialport = { path="../../src/serialport-rs"}

[dev-dependencies]
stderrlog = "0.6.0"
clap = { version = "4.5.16", features = ["derive"] }
